# chat_ollama

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/schemas/: chat.py
backend/app/services/: chat_manager.py  dependencies.py  mcp_client.py  ollama_client.py  openai_client.py  vector_store.py
backend/app/utils/: logging.py
backend/chat_ollama_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: ChatWindow.module.css  ChatWindow.tsx  MessageBubble.module.css  MessageBubble.tsx  Sidebar.module.css  Sidebar.tsx
frontend/lib/: api.ts  id.ts
