[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-ollama-backend"
version = "0.1.0"
description = "FastAPI backend for the local Ollama chat workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.4",
    "numpy>=1.26.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5"
]

[tool.uvicorn]
reload = true
app = "app.main:app"
host = "0.0.0.0"
port = 8000
